pdf generation fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,9 +10,14 @@
   }
 }
 
+body {
+  font-family: var(--font-montserrat);
+}
+
 @media print {
   body * {
     visibility: hidden;
+
   }
 
   .printable-area,
